# LoomFlow

./: .gitignore  .readthedocs.yaml  BUILD_LOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REVIEW_2026-07.md  SECURITY.md  Subagent.md  project.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
bench/: jeeves_vs_langchain.py  loom_vs_langchain.py  multi_tenant.py
benchmarks/: README.md  framework_shootout.py  shootout_complex.py
docs/: architecture.md  conf.py  index.md  migration_0.1_to_0.2.md  production_hardening.md  quickstart.md  recipes.md  workflow_vs_agent.md
docs/api/: index.rst
docs/migrations/: from-langgraph.md  from-openai-sdk.md
examples/: 00_hello.py  01_rag_pdf.py  01_real_model.py  02_specialist_debate.py  02_tools_parallel.py  03_multi_user_sessions.py  03_streaming.py  04_facts.py  04_structured_outputs.py  05_durable.py  05_memory_showcase.py  06_production.py  06_workflow_chain.py  06_workflow_triage.py  07_litellm.py  07_workflow_route.py  08_from_config.py  08_workflow_loop.py  09_self_refine.py  09_workflow_as_tool.py  10_reflexion.py  10_workflow_architecture.py  11_router.py  11_workflow_custom_step.py  12_audit_log.py  12_supervisor.py  13_actor_critic.py  13_telemetry.py  14_effort_dial.py  14_tree_of_thoughts.py  15_config_file.py  15_debate.py  16_shared_workspace.py  16_swarm.py  17_blackboard.py  17_prompt_caching.py  18_living_plan.py  18_plan_and_execute.py  19_rewoo.py  19_workspace_lifecycle.py  (+25 more)
jeevesagent/: __init__.py  graph.py  team.py
jeevesagent/agent/: __init__.py  api.py
jeevesagent/architecture/: __init__.py  actor_critic.py  base.py  blackboard.py  debate.py  helpers.py  plan_and_execute.py  react.py  reflexion.py  resolver.py  rewoo.py  router.py  self_refine.py  supervisor.py  swarm.py  tool_host_wrappers.py  tree_of_thoughts.py
jeevesagent/core/: __init__.py  _deprecation.py  _eviction.py  context.py  errors.py  protocols.py  types.py
jeevesagent/data/: __init__.py  lineage.py
jeevesagent/governance/: __init__.py  budget.py  retry.py
jeevesagent/jeeves/: __init__.py  client.py
jeevesagent/loader/: __init__.py  base.py  chunking.py  csv.py  dispatch.py  docx.py  excel.py  html.py  pdf.py  text.py
jeevesagent/mcp/: __init__.py  client.py  registry.py
jeevesagent/memory/: __init__.py  _embedding_util.py  auto_extract.py  chroma.py  chroma_facts.py  consolidator.py  embedder.py  facts.py  inmemory.py  postgres.py  postgres_facts.py  redis.py  redis_facts.py  resolver.py  sqlite_facts.py  vector.py
jeevesagent/model/: __init__.py  anthropic.py  echo.py  litellm.py  openai.py  retrying.py  scripted.py
jeevesagent/observability/: __init__.py  tracing.py
jeevesagent/runtime/: __init__.py  journal.py  sqlite.py
jeevesagent/security/: __init__.py  audit.py  hooks.py  permissions.py  secrets.py
jeevesagent/skills/: registry.py  skill.py  tools.py
jeevesagent/tools/: __init__.py  builtin.py  registry.py
jeevesagent/vectorstore/: __init__.py  _bm25.py  _filter.py  _mmr.py  base.py  chroma.py  faiss.py  inmemory.py  postgres.py
jeevesagent/workflow/: __init__.py
loomflow/: __init__.py  cli.py  graph.py  team.py
loomflow/a2a/: __init__.py  client.py  server.py  types.py
loomflow/agent/: __init__.py  api.py  auto_compact.py  snip.py  stop_hooks.py  worker_registry.py
loomflow/architecture/: __init__.py  actor_critic.py  base.py  blackboard.py  debate.py  helpers.py  plan_and_execute.py  react.py  reflexion.py  resolver.py  rewoo.py  router.py  self_refine.py  supervisor.py  swarm.py  tool_host_wrappers.py  tree_of_thoughts.py
loomflow/core/: __init__.py  _deprecation.py  _eviction.py  context.py  errors.py  ids.py  protocols.py  tone.py  types.py
loomflow/data/: __init__.py  lineage.py
loomflow/eval/: __init__.py  dataset.py  harness.py  judge.py  metrics.py
loomflow/governance/: __init__.py  budget.py  rate_limit.py  retry.py
loomflow/guardrails/: __init__.py  base.py  builtin.py
loomflow/jeeves/: __init__.py  client.py
loomflow/loader/: __init__.py  base.py  chunking.py  dispatch.py  docx.py  excel.py  html.py  pdf.py
loomflow/mcp/: __init__.py  client.py  registry.py  spec.py
loomflow/memory/: __init__.py  _embedding_util.py  _hybrid.py  _injection.py  _user_key.py  auto_extract.py  chroma.py  chroma_facts.py  consolidator.py  embedder.py  facts.py  graph.py  inmemory.py  lazy.py  postgres.py  postgres_facts.py  redis.py  redis_facts.py  resolver.py  sqlite.py  sqlite_facts.py  vector.py  worker.py
loomflow/model/: __init__.py  _effort.py  _pricing.py  _timeout.py  anthropic.py  count_tokens.py  echo.py  fallback.py  litellm.py  openai.py  retrying.py  scripted.py
loomflow/observability/: __init__.py  resolver.py  semconv.py  tracing.py
loomflow/runtime/: __init__.py  _signals.py  inproc.py  journal.py  journaled.py  postgres.py  resolver.py  sqlite.py
loomflow/security/: __init__.py  audit.py  hooks.py  permissions.py  permissions_resolver.py  secrets.py
loomflow/serve/: __init__.py  app.py
tests/: _subprocess_tools.py  conftest.py  test_a2a.py  test_actor_critic.py  test_agent_timeout.py  test_anthropic.py  test_approval_handler.py  test_architecture.py  test_audit.py  test_auto_compact.py  test_auto_extract.py  test_auto_extract_background.py  test_auto_extract_telemetry.py  test_batch_embedding.py  test_blackboard.py  test_bounded_per_user_state.py  test_builtin_tools.py  test_cache_telemetry.py  test_checkpoint_resume.py  test_checkpoint_store.py  test_chroma_facts.py  test_chroma_memory.py  test_chunking.py  test_cli.py  test_code_mode.py  test_consolidation_worker.py  test_count_tokens.py  test_debate.py  test_deprecation_warnings.py  test_destructive_flag_stamping.py  test_effort.py  test_embedder.py  test_eval.py  test_facts.py  test_fallback.py  test_fixes_wsa_agent.py  test_fixes_wsb1_architecture.py  test_fixes_wsb2_workflow_team.py  test_fixes_wsc_chroma.py  test_fixes_wsc_memory.py  (+107 more)
(+476 files in other folders)
