[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jeevesagent"
version = "0.0.1"
description = "Model-agnostic, MCP-native agent harness"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Jeeves" }]
dependencies = [
    "anyio>=4.4.0",
    "pydantic>=2.6.0",
    "python-ulid>=2.2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.30.0"]
litellm = ["litellm>=1.40.0"]
mcp = ["mcp>=1.0.0", "httpx>=0.27.0"]
postgres = ["asyncpg>=0.29.0", "pgvector>=0.2.5"]
chroma = ["chromadb>=0.5.0"]
redis = ["redis>=5.0.0"]
dbos = ["dbos>=0.7.0"]
temporal = ["temporalio>=1.7.0"]
otel = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
]
dev = [
    "pytest>=8.0",
    "anyio[trio]>=4.4.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.4",
    "import-linter>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["jeevesagent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_decorators = false  # pydantic decorators

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "anyio: mark test as async (anyio backend)",
]
