[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jeevesagent"
version = "0.8.0"
description = "Model-agnostic, MCP-native agent harness"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Jeeves" }]
dependencies = [
    "anyio>=4.4.0",
    "pydantic>=2.6.0",
    "python-ulid>=2.2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.30.0"]
litellm = ["litellm>=1.40.0"]
mcp = ["mcp>=1.0.0", "httpx>=0.27.0"]
postgres = ["asyncpg>=0.29.0", "pgvector>=0.2.5"]
chroma = ["chromadb>=0.5.0"]
redis = ["redis>=5.0.0"]
voyage = ["voyageai>=0.2.0"]
cohere = ["cohere>=5.0.0"]
dbos = ["dbos>=0.7.0"]
temporal = ["temporalio>=1.7.0"]
otel = [
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
]
loader-pdf = ["pypdf>=4.0"]
loader-docx = ["python-docx>=1.0"]
loader-excel = ["openpyxl>=3.1"]
loader-html = ["beautifulsoup4>=4.12"]
loader-token = ["tiktoken>=0.7"]
loader = [
    "pypdf>=4.0",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "beautifulsoup4>=4.12",
    "tiktoken>=0.7",
]
vectorstore-chroma = ["chromadb>=0.5.0"]
vectorstore-postgres = ["asyncpg>=0.29.0", "pgvector>=0.2.5"]
vectorstore-faiss = ["faiss-cpu>=1.8.0", "numpy>=1.26"]
vectorstore = [
    "chromadb>=0.5.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.5",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26",
]
dev = [
    "pytest>=8.0",
    "anyio[trio]>=4.4.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.4",
    "import-linter>=2.0",
    "bump-my-version>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["jeevesagent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "ASYNC",  # flake8-async
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.mypy]
strict = true
python_version = "3.11"
# ``unused-ignore`` is suppressed because lazy SDK imports
# (asyncpg, pgvector, mcp.client.*, redis.asyncio) raise different
# mypy error codes depending on whether the package is installed in
# the env (``import-not-found`` vs ``import-untyped``). Multi-code
# ignores cover both cases, but mypy then flags the unused half.
# ``disable_error_code`` (unlike ``warn_unused_ignores``) is not
# overridden by ``--strict``.
disable_error_code = ["unused-ignore"]
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_decorators = false  # pydantic decorators

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "anyio: mark test as async (anyio backend)",
]

# ---------------------------------------------------------------------------
# Version bumping (used by ``make release BUMP=...``)
# ---------------------------------------------------------------------------
# ``bump-my-version`` reads ``current_version`` here, edits every file
# listed below in lockstep, commits, and tags. The Makefile target
# ``release`` calls it then pushes commit + tag, which fires
# ``.github/workflows/release.yml`` for the PyPI upload.
#
# Daily flow stays as plain ``git commit`` / ``git push``. ``make
# release BUMP=patch|minor|major`` is the explicit "this is a release"
# flag — see the Makefile for usage.
[tool.bumpversion]
current_version = "0.8.0"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.(?P<minor>0|[1-9]\\d*)\\.(?P<patch>0|[1-9]\\d*)
    (?:\\.(?P<dev_label>dev)(?P<dev_n>\\d+))?
"""
serialize = [
    "{major}.{minor}.{patch}.{dev_label}{dev_n}",
    "{major}.{minor}.{patch}",
]
search = "{current_version}"
replace = "{new_version}"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"
message = "Release v{new_version}"
allow_dirty = false  # refuses to bump if working tree has uncommitted changes

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "jeevesagent/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'
